--- a/cv/index.html
+++ b/cv/index.html
@@ -316,7 +316,7 @@
     <main role="main" class="main">
         <section id="about" class="section">
             <h2><i class="fa fa-user left"></i>À propos</h2>
-            <p>Toujours à la recherche de défis, mon dépassement est primordial et ma curiosité est sans fin. J'aspire à élargir mes connaissances et mes capacités. La communication, l'ouverture d'esprit, le travail d'équipe et dynamisme font partis de mes valeurs.   </p>
+            <p>Toujours à la recherche de défis, mon dépassement est primordial et ma curiosité est sans fin. J'aspire à élargir mes connaissances et mes capacités. La communication, l'ouverture d'esprit, le travail d'équipe et dynamisme font partis de des valeurs qui me sont chers.  </p>
         </section>
         <section id="work" class="section">
             <h2><i class="fa fa-suitcase left"></i>Expériences de travail</h2>
