--- a/cv/index.html
+++ b/cv/index.html
@@ -33,7 +33,7 @@
         }
         a:hover,
         a:focus {
-            color: #2f2c55;
+            color: #37474F;
             text-decoration: none;
         }
         .header {
@@ -57,7 +57,7 @@
         h2 {
             font-size: 3.5em;
             margin: 0.83em 0;
-            text-transform: capitalize;
+            color: #000;
         }
         h3 {
             color: #4d4d4d;
@@ -305,7 +305,7 @@
         <ul id="contact" class="contact-list list-lines">
             <li class="contact-header">(581)999-8512 | </li>
             <li class="contact-header"><a href="/cdn-cgi/l/email-protection#bdded5d2c8d4d3dccfd9d1d8c9d2c8cfd3d8dcc8dafddad0dcd4d193ded2d0"><span class="__cf_email__" data-cfemail="76151e19031f181704121a1302190304181317031136111b171f1a5815191b">[email&#160;protected]</span></a></li>
-            <li class="contact-header"><a href="https:&#x2F;&#x2F;timblogues2017gabrielchouinardletourneaublog.wordpress.com&#x2F;"> | https:&#x2F;&#x2F;timblogues2017gabrielchouinardletourneaublog.wordpress.com&#x2F;</a></li>
+            <li class="contact-header"><a href="https:&#x2F;&#x2F;timblogues2017gabrielchouinardletourneaublog.wordpress.com&#x2F;"> | WordPress-Portfolio</a></li>
         </ul>
         <ul id="profiles" class="profiles-list list-set">
             <li><a href="https:&#x2F;&#x2F;twitter.com&#x2F;F4CTOOR" class="profile" title="Twitter"><i class="fa fa-twitter"></i><span class="profile-name">Twitter</span></a></li>
@@ -316,39 +316,13 @@
     <main role="main" class="main">
         <section id="about" class="section">
             <h2><i class="fa fa-user left"></i>À propos</h2>
-            <p>Toujours à la recherche de défis, mon dépassement est primordial et ma curiosité est sans fin. J'aspire à élargir mes connaissances et mes capacités. La communication, l'ouverture d'esprit, le travail d'équipe et dynamisme font partis de mes valeurs.   </p>
-        </section>
-        <section id="work" class="section">
-            <h2><i class="fa fa-suitcase left"></i>Expériences de travail</h2>
-            <section class="section-sub section-sub-job">
-                <h3>Vendeur, Boulangerie&#x2F;Pâtisserie Péché Mignon</h3>
-                <h4>Janvier 2017 - Aujourd'hui</h4>
-                <p>Boulangerie&#x2F;Pâtisserie française situé sur chemin Saint-Foy.</p>
-                <h4>Résumé</h4>
-                <ul>
-                    <li>Service à la clientèle</li>
-                    <li>Vente</li>
-                    <li>Préparation des aliments</li>
-                </ul>
-            </section>
-            <section class="section-sub section-sub-job">
-                <h3>Caissier&#x2F;baker, La Galette Libanaise</h3>
-                <h4>Août - Décembre 2016</h4>
-                <p></p>
-            </section>
-            <section class="section-sub section-sub-job">
-                <h3>Photographe, AML Jouis Joliette</h3>
-                <h4>Juin - Août 2016</h4>
-                <p></p>
-            </section>
+            <p>Toujours à la recherche de défis, mon dépassement est primordial et ma curiosité est sans fin. La photographie fait partie des capacités que j'ai acquis à travers les années, cette passion m'offre l'opportunité de d'extérioriser mes idées et de les faconner de concrètement . Par la suite, j'aspire à élargir mes connaissances et mes capacités. La communication, l'ouverture d'esprit, le travail d'équipe et dynamisme font partis de mes valeurs.</p>
         </section>
         <section id="education" class="section">
             <h2><i class="fa fa-graduation-cap left"></i>Études</h2>
             <section class="section-sub section-sub-education">
-                <h3>Technologie de l&#39;information - Cégep Sainte-Foy</h3>
-                <h3>Cégep Sainte-Foy</h3>
-                <h4>2017 - 2020 (attendu)</h4>
-                <p>Technique d&#39;intégration multimédia</p>
+                <h3>Technique d'intégration multimédia - Cégep Sainte-Foy</h3>
+                <h4>2017 - 2020</h4>
                 <h4>Capacités acquises</h4>
                 <ul>
                     <li>CSS</li>
@@ -357,6 +331,8 @@
                     <li>Photoshop</li>
                     <li>Illustrator</li>
                     <li>Sketch</li>
+                    <li>AGILE</li>
+                    <li>SCRUM</li>
                 </ul>
             </section>
         </section>
@@ -405,6 +381,23 @@
                     <li>.FLAC</li>
                     <li>Hi-Fi</li>
                 </ul>
+            </section>
+        </section>
+        <section id="work" class="section">
+            <h2><i class="fa fa-suitcase left"></i>Expériences de travail</h2>
+            <section class="section-sub section-sub-job">
+                <h3>Vendeur, Boulangerie&#x2F;Pâtisserie Péché Mignon</h3>
+                <h4>Janvier 2017 - Aujourd'hui</h4>
+            </section>
+            <section class="section-sub section-sub-job">
+                <h3>Caissier&#x2F;baker, La Galette Libanaise</h3>
+                <h4>2016</h4>
+                <p></p>
+            </section>
+            <section class="section-sub section-sub-job">
+                <h3>Photographe, AML Jouis Joliette</h3>
+                <h4>Été 2016</h4>
+                <p></p>
             </section>
         </section>
         <section id="languages" class="section">
