--- a/cv/index.html
+++ b/cv/index.html
@@ -387,8 +387,17 @@
         <section id="work" class="section">
             <h2><i class="fa fa-suitcase left"></i>Expériences de travail</h2>
             <section class="section-sub section-sub-job">
+                <h3>Développeur Front-End&#x2F;Orage Communication</h3>
+                <h4>Mai 2018 - Aujourd'hui</h4>
+                <h4>Tâches</h4>
+                <ul>
+                    <li>Intégration</li>
+                    <li>Conception</li>
+                </ul>
+            </section>
+            <section class="section-sub section-sub-job">
                 <h3>Vendeur, Boulangerie&#x2F;Pâtisserie Péché Mignon</h3>
-                <h4>Janvier 2017 - Aujourd'hui</h4>
+                <h4>Janvier 2017 - Mai 2018</h4>
             </section>
             <section class="section-sub section-sub-job">
                 <h3>Caissier&#x2F;baker, La Galette Libanaise</h3>
