--- a/cv/index.html
+++ b/cv/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" />
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7COpen+Sans" />
     <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/FortAwesome/Font-Awesome/307323a6a7fe69b7018cb49d2b7e43e1f4b6c92b/css/font-awesome.min.css" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
     <style type="text/css">
         /*<!--*/
         body {
@@ -33,7 +35,7 @@
         }
         a:hover,
         a:focus {
-            color: #37474F;
+            color: #cbdded;
             text-decoration: none;
         }
         .header {
@@ -49,7 +51,7 @@
             margin-right: 0.25em;
         }
         h1 {
-            color: #131313;
+            color: #cbdded;
             font-size: 2em;
             margin: 1em 0 0;
             text-transform: capitalize;
