--- a/cv/index.html
+++ b/cv/index.html
@@ -16,22 +16,22 @@
         body {
             font-size: 62.5%;
             font-family: "Trebuchet MS", sans-serif;
-            background-color: #fff;
-            color: #131313;
+            background-color: #000;
+            color: #fff;
         }
         .main-wrap {
             max-width: 960px;
             margin: 0 auto;
         }
         a {
-            color: #131313;
+            color: #fff;
             text-decoration: none;
             -webkit-transition: color 0.175s ease 0.05s;
             -moz-transition: color 0.175s ease 0.05s;
             transition: color 0.2s ease-in-out 0.09s;
         }
         a:visited {
-            color: #000000;
+            color: #7E8891;
         }
         a:hover,
         a:focus {
@@ -59,15 +59,15 @@
         h2 {
             font-size: 3.5em;
             margin: 0.83em 0;
-            color: #000;
+            color: #7E8891;
         }
         h3 {
-            color: #4d4d4d;
+            color: #7E8891;
             font-size: 1.75em;
             margin: 1em 0 0;
         }
         h4 {
-            color: #666666;
+            color: #7E8891;
             font-size: 1.25em;
             margin: 0 0 1em;
         }
