--- a/cv/index.html
+++ b/cv/index.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" />
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7COpen+Sans" />
     <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/FortAwesome/Font-Awesome/307323a6a7fe69b7018cb49d2b7e43e1f4b6c92b/css/font-awesome.min.css" />
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon_32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon_16x16.png">
     <style type="text/css">
         /*<!--*/
         body {
             font-size: 62.5%;
             font-family: "Trebuchet MS", sans-serif;
-            background-color: #000;
-            color: #fff;
+            background-color: #fff;
+            color: #565656;
         }
         .main-wrap {
             max-width: 960px;
@@ -51,7 +51,7 @@
             margin-right: 0.25em;
         }
         h1 {
-            color: #cbdded;
+            color: #343333;
             font-size: 2em;
             margin: 1em 0 0;
             text-transform: capitalize;
@@ -59,15 +59,15 @@
         h2 {
             font-size: 3.5em;
             margin: 0.83em 0;
-            color: #7E8891;
+            color: #4D4D4D;
         }
         h3 {
-            color: #7E8891;
+            color: #4D4D4D;
             font-size: 1.75em;
             margin: 1em 0 0;
         }
         h4 {
-            color: #7E8891;
+            color: #4D4D4D;
             font-size: 1.25em;
             margin: 0 0 1em;
         }
