--- a/cv/index.html
+++ b/cv/index.html
@@ -35,7 +35,7 @@
         }
         a:hover,
         a:focus {
-            color: #cbdded;
+            color: #000;
             text-decoration: none;
         }
         .header {
