--- a/cv/index.html
+++ b/cv/index.html
@@ -24,7 +24,7 @@
             margin: 0 auto;
         }
         a {
-            color: #fff;
+            color: #7E8891;
             text-decoration: none;
             -webkit-transition: color 0.175s ease 0.05s;
             -moz-transition: color 0.175s ease 0.05s;
