--- a/cv/index.html
+++ b/cv/index.html
@@ -28,9 +28,9 @@
             <li class="contact-header"><a href="https:&#x2F;&#x2F;timblogues2017gabrielchouinardletourneaublog.wordpress.com&#x2F;"> | WordPress-Portfolio</a></li>
         </ul>
         <ul id="profiles" class="profiles-list list-set">
-            <li><a href="https:&#x2F;&#x2F;twitter.com&#x2F;F4CTOOR" class="profile" title="Twitter"><i class="fa fa-twitter"></i><span class="profile-name">Twitter</span></a></li>
-            <li><a href="https:&#x2F;&#x2F;www.linkedin.com&#x2F;in&#x2F;gabriel-chouinard-l%C3%A9tourneau-b35847149&#x2F;" class="profile" title="LinkedIn"><i class="fa fa-linkedin"></i><span class="profile-name">LinkedIn</span></a></li>
-            <li><a href="https:&#x2F;&#x2F;www.instagram.com&#x2F;f4ctoor&#x2F;" class="profile" title="Instagram"><i class="fa fa-instagram"></i><span class="profile-name">Instagram</span></a></li>
+            <li><a href="https:&#x2F;&#x2F;twitter.com&#x2F;F4CTOOR" class="profile" title="Twitter" target="_blank"><i class="fa fa-twitter"></i><span class="profile-name">Twitter</span></a></li>
+            <li><a href="https:&#x2F;&#x2F;www.linkedin.com&#x2F;in&#x2F;gabriel-chouinard-l%C3%A9tourneau-b35847149&#x2F;" class="profile" title="LinkedIn" target="_blank"><i class="fa fa-linkedin"></i><span class="profile-name">LinkedIn</span></a></li>
+            <li><a href="https:&#x2F;&#x2F;www.instagram.com&#x2F;f4ctoor&#x2F;" class="profile" title="Instagram" target="_blank"><i class="fa fa-instagram"></i><span class="profile-name">Instagram</span></a></li>
         </ul>
     </header>
     <main role="main" class="main">
