--- a/cv/index.html
+++ b/cv/index.html
@@ -24,7 +24,7 @@
         <h3 class="label">Développeur Front-End</h3>
         <ul id="contact" class="contact-list list-lines">
             <li class="contact-header">(581)999-8512 | </li>
-            <li class="contact-header"><a href="/cdn-cgi/l/email-protection#bdded5d2c8d4d3dccfd9d1d8c9d2c8cfd3d8dcc8dafddad0dcd4d193ded2d0"><span class="__cf_email__" data-cfemail="76151e19031f181704121a1302190304181317031136111b171f1a5815191b">[email&#160;protected]</span></a></li>
+            <li class="contact-header"><a href="mailto:chouinardletourneaug@gmail.com"><span class="__cf_email__" data-cfemail="76151e19031f181704121a1302190304181317031136111b171f1a5815191b">[email&#160;protected]</span></a></li>
             <li class="contact-header"><a href="https:&#x2F;&#x2F;timblogues2017gabrielchouinardletourneaublog.wordpress.com&#x2F;"> | WordPress-Portfolio</a></li>
         </ul>
         <ul id="profiles" class="profiles-list list-set">
