--- a/cv/index.html
+++ b/cv/index.html
@@ -47,8 +47,13 @@
                 <h4>Capacités acquises</h4>
                 <ul>
                     <li>CSS</li>
+                    <li>SASS</>
                     <li>HTML</li>
+                    <li>Référencement naturel</li>
+                    <li>Google analytics</li>
                     <li>Javascript</li>
+                    <li>JQuery</li>
+                    <li>PHP</li>
                     <li>Photoshop</li>
                     <li>Illustrator</li>
                     <li>Sketch</li>
