--- a/cv/index.html
+++ b/cv/index.html
@@ -25,7 +25,7 @@
         <ul id="contact" class="contact-list list-lines">
             <li class="contact-header">(581)999-8512 | </li>
             <li class="contact-header"><a href="mailto:chouinardletourneaug@gmail.com"><span class="__cf_email__" data-cfemail="76151e19031f181704121a1302190304181317031136111b171f1a5815191b" target="_blank">[email&#160;protected]</span></a></li>
-            <li class="contact-header"><a href="https:&#x2F;&#x2F;timblogues2017gabrielchouinardletourneaublog.wordpress.com&#x2F;" target="_blank"> | WordPress-Portfolio</a></li>
+<!--             <li class="contact-header"><a href="https:&#x2F;&#x2F;timblogues2017gabrielchouinardletourneaublog.wordpress.com&#x2F;" target="_blank"> | WordPress-Portfolio</a></li> -->
         </ul>
         <ul id="profiles" class="profiles-list list-set">
             <li><a href="https:&#x2F;&#x2F;twitter.com&#x2F;F4CTOOR" class="profile" title="Twitter" target="_blank"><i class="fa fa-twitter"></i><span class="profile-name">Twitter</span></a></li>
