--- a/cv/index.html
+++ b/cv/index.html
@@ -49,8 +49,6 @@
                     <li>CSS</li>
                     <li>SASS</>
                     <li>HTML</li>
-                    <li>Référencement naturel</li>
-                    <li>Google analytics</li>
                     <li>Javascript</li>
                     <li>JQuery</li>
                     <li>PHP</li>
@@ -70,6 +68,8 @@
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>Javascript</li>
+                    <li>Référencement naturel</li>
+                    <li>Google analytics</li>
                 </ul>
             </section>
             <section class="section-sub section-sub-skill">
@@ -78,6 +78,7 @@
                     <li>Photoshop</li>
                     <li>Illustrator</li>
                     <li>Sketch</li>
+                    <li>XD</li>
                     <li>Wireframing</li>
                 </ul>
             </section>
@@ -87,6 +88,8 @@
                     <li>Photoshop</li>
                     <li>Lightroom</li>
                     <li>Audition</li>
+                    <li>After effects</li>
+                    <li>Premiere</li>
                 </ul>
             </section>
         </section>
@@ -118,6 +121,8 @@
                 <ul>
                     <li>Intégration</li>
                     <li>Conception</li>
+                    <li>Référencement (Google analytics)</li>
+                    <li>Mise en ligne</li>
                 </ul>
             </section>
             <section class="section-sub section-sub-job">
