--- a/cv/index.html
+++ b/cv/index.html
@@ -21,7 +21,7 @@
 <div class="main-wrap">
     <header class="header">
         <h1>Gabriel Chouinard Letourneau</h1>
-        <h3 class="label">Développeur Front-End</h3>
+        <h3 class="label">Développeur Front-End / Full-stack</h3>
         <ul id="contact" class="contact-list list-lines">
 <!--             <li class="contact-header">(581)999-8512 | </li> -->
             <li class="contact-header"><a href="mailto:chouinardletourneaug@gmail.com"><span class="__cf_email__" data-cfemail="76151e19031f181704121a1302190304181317031136111b171f1a5815191b" target="_blank">[email&#160;protected]</span></a></li>
@@ -57,6 +57,8 @@
                     <li>Sketch</li>
                     <li>AGILE</li>
                     <li>SCRUM</li>
+                    <li>WordPress</li>
+                    <li>ReactJS, de façon autodidacte</li>
                 </ul>
             </section>
         </section>
@@ -115,8 +117,17 @@
         <section id="work" class="section">
             <h2><i class="fa fa-suitcase left"></i>Expériences de travail</h2>
             <section class="section-sub section-sub-job">
+                <h3>Développeur/designer Web - Freelancing</h3>
+                <h4>Octobre 2018 - Aujourd'hui</h4>
+                <h4>Tâches</h4>
+                <ul>
+                    <li>Intégration</li>
+                    <li>Conception</li>
+                </ul>
+            </section>
+            <section class="section-sub section-sub-job">
                 <h3>Développeur Front-End&#x2F;Orage Communication</h3>
-                <h4>Mai 2018 - Aujourd'hui</h4>
+                <h4>Mai 2018 - Octobre 2018</h4>
                 <h4>Tâches</h4>
                 <ul>
                     <li>Intégration</li>
