--- a/cv/index.html
+++ b/cv/index.html
@@ -58,7 +58,6 @@
                     <li>AGILE</li>
                     <li>SCRUM</li>
                     <li>WordPress</li>
-                    <li>ReactJS, de façon autodidacte</li>
                 </ul>
             </section>
         </section>
@@ -72,6 +71,7 @@
                     <li>Javascript</li>
                     <li>Référencement naturel</li>
                     <li>Google analytics</li>
+                    <li>ReactJS</li>
                 </ul>
             </section>
             <section class="section-sub section-sub-skill">
