--- a/cv/index.html
+++ b/cv/index.html
@@ -50,6 +50,7 @@
                     <li>SASS</>
                     <li>HTML</li>
                     <li>Javascript</li>
+                    <li>Typescript</li>
                     <li>JQuery</li>
                     <li>PHP</li>
                     <li>Photoshop</li>
