--- a/cv/index.html
+++ b/cv/index.html
@@ -23,7 +23,7 @@
         <h1>Gabriel Chouinard Letourneau</h1>
         <h3 class="label">Développeur Front-End / Full-stack</h3>
         <ul id="contact" class="contact-list list-lines">
-            <li class="contact-header">(581)999-8512 | </li
+            <li class="contact-header">(581)999-8512 | </li>
             <li class="contact-header"><a href="mailto:chouinardletourneaug@gmail.com"><span class="__cf_email__" data-cfemail="76151e19031f181704121a1302190304181317031136111b171f1a5815191b" target="_blank">[email&#160;protected]</span></a></li>
 <!--             <li class="contact-header"><a href="https:&#x2F;&#x2F;timblogues2017gabrielchouinardletourneaublog.wordpress.com&#x2F;" target="_blank"> | WordPress-Portfolio</a></li> -->
         </ul>
