--- a/cv/index.html
+++ b/cv/index.html
@@ -133,7 +133,7 @@
                 <ul>
                     <li>Intégration</li>
                     <li>Conception</li>
-                    <li>Référencement (Google analytics)</li>
+                    <li>Référencement naturel & Google analytics</li>
                     <li>Mise en ligne</li>
                 </ul>
             </section>
