--- a/cv/index.html
+++ b/cv/index.html
@@ -72,7 +72,7 @@
                     <li>Javascript</li>
                     <li>Référencement naturel</li>
                     <li>Google analytics</li>
-                    <li>ReactJS</li>
+                    <li>ReactJS, self-learning</li>
                 </ul>
             </section>
             <section class="section-sub section-sub-skill">
