--- a/cv/index.html
+++ b/cv/index.html
@@ -46,11 +46,12 @@
                 <h4>2017 - 2020</h4>
                 <h4>Capacités acquises</h4>
                 <ul>
-                    <li>CSS</li>
+                    <li>CSS3</li>
                     <li>SASS</>
-                    <li>HTML</li>
+                    <li>HTML5</li>
                     <li>Javascript</li>
                     <li>Typescript</li>
+                    <li>OOP concept</li>
                     <li>JQuery</li>
                     <li>PHP</li>
                     <li>Photoshop</li>
@@ -67,12 +68,13 @@
             <section class="section-sub section-sub-skill">
                 <h3 class="skills">Développement web</h3>
                 <ul class="list-set keywords">
-                    <li>HTML</li>
-                    <li>CSS</li>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
                     <li>Javascript</li>
                     <li>Référencement naturel</li>
                     <li>Google analytics</li>
-                    <li>ReactJS</li>
+                    <li>ReactJS(en apprentissage)</li>
+                    <li>Typo3</li>
                 </ul>
             </section>
             <section class="section-sub section-sub-skill">
@@ -93,6 +95,17 @@
                     <li>Audition</li>
                     <li>After effects</li>
                     <li>Premiere</li>
+                </ul>
+            </section>
+            <section class="section-sub section-sub-skill">
+                <h3 class="skills">compétences interpersonnelles</h3>
+                <ul class="list-set keywords">
+                    <li>Leadership</li>
+                    <li>Adaptation</li>
+                    <li>Communication</li>
+                    <li>Écoute</li>
+                    <li>Ouverture d'esprit</li>
+                    <li><i>Teamwork oriented</i></li>
                 </ul>
             </section>
         </section>
@@ -117,6 +130,17 @@
         </section>
         <section id="work" class="section">
             <h2><i class="fa fa-suitcase left"></i>Expériences de travail</h2>
+            <section class="section-sub section-sub-job">
+                <h3>Développeur web - CSPQ </h3>
+                <h4>Octobre 2018 - Aujourd'hui</h4>
+                <h4>Tâches</h4>
+                <ul>
+                    <li>Intégration</li>
+                    <li>Conception</li>
+                    <li>Typo3</li>
+                    <li>UI/UX</li>
+                </ul>
+            </section>
             <section class="section-sub section-sub-job">
                 <h3>Développeur/designer Web - Freelancing</h3>
                 <h4>Octobre 2018 - Aujourd'hui</h4>
