--- a/cv/index.html
+++ b/cv/index.html
@@ -73,6 +73,7 @@
                     <li>Javascript</li>
                     <li>Référencement naturel</li>
                     <li>Google analytics</li>
+                    <li>GitHub/Git</li>
                     <li>ReactJS(en apprentissage)</li>
                     <li>Typo3</li>
                 </ul>
@@ -98,7 +99,7 @@
                 </ul>
             </section>
             <section class="section-sub section-sub-skill">
-                <h3 class="skills">compétences interpersonnelles</h3>
+                <h3 class="skills">Compétences interpersonnelles</h3>
                 <ul class="list-set keywords">
                     <li>Leadership</li>
                     <li>Adaptation</li>
