--- a/cv/index.html
+++ b/cv/index.html
@@ -74,7 +74,7 @@
                     <li>Référencement naturel</li>
                     <li>Google analytics</li>
                     <li>GitHub/Git</li>
-                    <li>ReactJS(en apprentissage)</li>
+                    <li>ReactJS (en apprentissage autodidacte)</li>
                     <li>Typo3</li>
                 </ul>
             </section>
