--- a/cv/index.html
+++ b/cv/index.html
@@ -132,7 +132,7 @@
             <h2><i class="fa fa-suitcase left"></i>Expériences de travail</h2>
             <section class="section-sub section-sub-job">
                 <h3>Développeur web - CSPQ </h3>
-                <h4>Octobre 2018 - Aujourd'hui</h4>
+                <h4>Mai 2019 - Août 2019</h4>
                 <h4>Tâches</h4>
                 <ul>
                     <li>Intégration</li>
