--- a/cv/index.html
+++ b/cv/index.html
@@ -20,7 +20,7 @@
 <div class="main-wrap">
     <header class="header">
         <h1>Gabriel Chouinard Letourneau</h1>
-        <h3 class="label">Développeur Front-End / Full-stack</h3>
+        <h3 class="label">Développeur Front-End</h3>
         <ul id="contact" class="contact-list list-lines">
             <li class="contact-header">(581)999-8512</li>
             <li class="contact-header"><a href="mailto:chouinardletourneaug@gmail.com"><span class="__cf_email__" data-cfemail="76151e19031f181704121a1302190304181317031136111b171f1a5815191b" target="_blank">chouinardletourneaug@gmail.com</span></a></li>
