--- a/cv/index.html
+++ b/cv/index.html
@@ -34,7 +34,7 @@
     <main role="main" class="main">
         <section id="about" class="section">
             <h2><i class="fa fa-user left"></i>À propos</h2>
-            <p>Toujours à la recherche de défis, mon dépassement est primordial et ma curiosité est sans fin. La photographie fait partie des capacités que j'ai acquis à travers les années, cette passion m'offre l'opportunité de d'extérioriser mes idées et de les faconner de concrètement. La communication, l'ouverture d'esprit, le travail d'équipe et dynamisme font partis de mes valeurs. Cherchant à en apprendre plus sur les méthologies AGILE, les postes de coach AGILE et SCRUM master m'intéresse comme but à long terme.</p>
+            <p>Toujours à la recherche de défis, mon dépassement est primordial et ma curiosité est sans fin. La photographie fait partie des capacités que j'ai acquis à travers les années, cette passion m'offre l'opportunité de d'extérioriser mes idées et de les faconner de concrètement. La communication, l'ouverture d'esprit, le travail d'équipe et dynamisme font partis de mes valeurs. Cherchant à en apprendre plus sur les méthologies AGILE, les postes de coach AGILE et SCRUM master m'intéresse comme but à long terme. De plus, j'ai aussi pour but d'apprendre le développement d'applications native avec des technologies comme React Native et Flutter.</p>
             <p>“A man, though wise, should never be ashamed of learning more, and must unbend his mind.” 
                 ― Sophocles, Antigone</p>
         </section>
