--- a/cv/index.html
+++ b/cv/index.html
@@ -34,7 +34,7 @@
     <main role="main" class="main">
         <section id="about" class="section">
             <h2><i class="fa fa-user left"></i>À propos</h2>
-            <p>Toujours à la recherche de défis, mon dépassement est primordial et ma curiosité est sans fin. La photographie fait partie des capacités que j'ai acquis à travers les années, cette passion m'offre l'opportunité de d'extérioriser mes idées et de les faconner de concrètement. La communication, l'ouverture d'esprit, le travail d'équipe et dynamisme font partis de mes valeurs. Cherchant à en apprendre plus sur les méthologies AGILE, les postes de coach <em>AGILE</em> et <em>SCRUM</em> master m'intéresse comme but à long terme. De plus, j'ai aussi pour but d'apprendre le développement d'applications native avec des technologies comme <em>React Native</em> et <em>Flutter</em>.</p>
+            <p>Toujours à la recherche de défis, mon dépassement est primordial et ma curiosité est sans fin. La photographie fait partie des capacités que j'ai acquis à travers les années, cette passion m'offre l'opportunité de d'extérioriser mes idées et de les faconner de concrètement. La communication, l'ouverture d'esprit, le travail d'équipe et dynamisme font partis de mes valeurs. Cherchant à en apprendre plus sur les méthologies AGILE, les postes de coach <b>AGILE</b> et <b>SCRUM</b> master m'intéresse comme but à long terme. De plus, j'ai aussi pour but d'apprendre le développement d'applications native avec des technologies comme <b>React Native</b> et <b>Flutter</b>.</p>
             <p><em>“A man, though wise, should never be ashamed of learning more, and must unbend his mind.” 
                 ― Sophocles, Antigone</em></p>
         </section>
