--- a/cv/index.html
+++ b/cv/index.html
@@ -99,8 +99,11 @@
                     <li>HTML5</li>
                     <li>Javascript</li>
                     <li>Typescript</li>
+                    <li>JQuery</li>
                     <li>OOP concept</li>
                     <li>JQuery</li>
+                    <li>MVC</li>
+                    <li>Laravel</li>
                     <li>PHP</li>
                     <li>Photoshop</li>
                     <li>Illustrator</li>
