--- a/cv/index.html
+++ b/cv/index.html
@@ -34,7 +34,7 @@
     <main role="main" class="main">
         <section id="about" class="section">
             <h2><i class="fa fa-user left"></i>À propos</h2>
-            <p>Toujours à la recherche de défis, mon dépassement est primordial et ma curiosité est sans fin. La photographie fait partie des capacités que j'ai acquis à travers les années, cette passion m'offre l'opportunité de d'extérioriser mes idées et de les faconner de concrètement. La communication, l'ouverture d'esprit, le travail d'équipe et dynamisme font partis de mes valeurs. Cherchant à en apprendre plus sur les méthologies AGILE, les postes de coach <b>AGILE</b> et <b>SCRUM</b> master m'intéresse comme but à long terme. De plus, j'ai aussi pour but d'apprendre le développement d'applications native avec des technologies comme <b>React Native</b> et <b>Flutter</b>.</p>
+            <p>Toujours à la recherche de défis, mon dépassement est primordial et ma curiosité est sans fin. La photographie fait partie des capacités que j'ai acquise à travers les années, cette passion m'offre l'opportunité de d'extérioriser mes idées et de les façonner de concrètement. La communication, l'ouverture d'esprit, le travail d'équipe et dynamisme font partis de mes valeurs. Cherchant à en apprendre plus sur les méthologies AGILE, les postes de coach <b>AGILE</b> et <b>SCRUM</b> master m'intéresse comme but à long terme. De plus, j'ai aussi pour but d'apprendre le développement d'applications natives avec des technologies comme <b>React Native</b> et <b>Flutter</b>.</p>
             <p><em>“A man, though wise, should never be ashamed of learning more, and must unbend his mind.” 
                 ― Sophocles, Antigone</em></p>
         </section>
@@ -59,11 +59,8 @@
                     <li>Référencement naturel</li>
                     <li>Google analytics</li>
                     <li>GitHub/Git</li>
-                    <li>ReactJS (en apprentissage autodidacte)</li>
+                    <li>ReactJS (en cours)</li>
                     <li>Typo3</li>
-                    <li>Photoshop</li>
-                    <li>Illustrator</li>
-                    <li>Sketch</li>
                     <li>WordPress</li>
                 </ul>
             </section>
@@ -78,7 +75,7 @@
                 </ul>
             </section>
             <section class="section-sub section-sub-skill">
-                <h3 class="skills">Traitements des médias</h3>
+                <h3 class="skills">Traitement des médias</h3>
                 <ul class="list-set keywords">
                     <li>Photoshop</li>
                     <li>Lightroom</li>
@@ -95,17 +92,10 @@
                     <li>Communication</li>
                     <li>Écoute</li>
                     <li>Ouverture d'esprit</li>
-                    <li>Positivism</li>
+                    <li>Enthousiasme</li>
                     <li>Ouverture d'esprit</li>
                     <li><i>Teamwork oriented</i></li>
                 </ul>
-            </section>
-        </section>
-       <section id="education" class="section">
-        <h2><i class="fa fa-graduation-cap left"></i>Études</h2>
-            <section class="section-sub section-sub-education">
-                <h3>Technique d'intégration multimédia - Cégep Sainte-Foy</h3>
-                <h4>2017 - 2020</h4>
             </section>
         </section>
         <section id="interests" class="section">
@@ -127,10 +117,17 @@
                 </ul>
             </section>
         </section>
+       <section id="education" class="section">
+        <h2><i class="fa fa-graduation-cap left"></i>Études</h2>
+            <section class="section-sub section-sub-education">
+                <h3>Techniques d'intégration multimédia - Cégep Sainte-Foy</h3>
+                <h4>2017 - 2020</h4>
+            </section>
+        </section>
         <section id="work" class="section">
             <h2><i class="fa fa-suitcase left"></i>Expériences de travail</h2>
             <section class="section-sub section-sub-job">
-                <h3>Développeur web - CSPQ </h3>
+                <h3>Développeur web - CSPQ (Centre de services partagés du Québec) </h3>
                 <h4>Mai 2019 - Août 2019</h4>
                 <h4>Tâches</h4>
                 <ul>
@@ -150,7 +147,7 @@
                 </ul>
             </section>
             <section class="section-sub section-sub-job">
-                <h3>Développeur Front-End&#x2F;Orage Communication</h3>
+                <h3>Développeur Front-End - Orage Communication</h3>
                 <h4>Mai 2018 - Octobre 2018</h4>
                 <h4>Tâches</h4>
                 <ul>
