--- a/cv/index.html
+++ b/cv/index.html
@@ -116,6 +116,14 @@
                     <li>Hi-Fi</li>
                 </ul>
             </section>
+            <section class="section-sub section-sub-interest">
+                <h3 class="skills">Autres</h3>
+                <ul class="list-set keywords">
+                    <li>Escalade</li>
+                    <li>Plein-air</li>
+                    <li>Écriture</li>
+                </ul>
+            </section>
         </section>
        <section id="education" class="section">
         <h2><i class="fa fa-graduation-cap left"></i>Études</h2>
